# gen-ai-research-parsing

./: .slugignore  README.md  app.py  gui.py  main1.py  main2.py  pdf_query.ipynb  pyproject.toml  requirements.txt
app/: __init__.py  components.py  encoding.py  lengths.py  main.py  reader.py  readerI.py  splitter.py  utils.py  vector.py
static/: style.css
templates/: index.html
